<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0f9f7"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="284dp"
        android:layout_height="317dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo_v3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSelectSignIn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF2196F3"
        android:text="@string/signin"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectLogin"
        app:layout_constraintVertical_bias="0.267" />

    <Button
        android:id="@+id/buttonSelectLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>