<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pacientes.PacientesFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/optionsOverPatients"
        android:textColor="#151F61"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/LinearLayoutAddPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#EBF0F2FF"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNewPatient"
            android:textColor="#151F61"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutModifyPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#EBF0F2FF"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifyPatient"
            android:textColor="#151F61"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutConsultIll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#EBF0F2FF"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultIll"
            android:textColor="#151F61"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>