<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView_patient"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userProfilePicClinicHistory"
            android:layout_width="281dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/textView_patientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:maxLength="47"
                android:text="@string/patientName"
                android:textAlignment="viewStart"
                android:textColor="#223263"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_patientAnemiaConsulted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/anemiaConsult"
                android:textAllCaps="false"
                android:textColor="#6C7180"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView_patientDiabetesConsulted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/diabetesConsult"
                android:textColor="#6C7180"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView_patientDeceaseConsult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deceaseConsult"
                android:textColor="#6C7180"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>